@@ -1,3 +1,5 @@
+2006/3/1 -- released version 20060301_trunk
+
 2006/2/28 -- released version 20060228_trunk
 
 2006/2/27 -- released version 20060227_trunk
